--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
   "bugs": {
     "url": "https://github.com/Timkor/nuxt-locale/issues"
   },
-  "homepage": "https://github.com/Timkor/nuxt-locale#readme"
+  "homepage": "https://github.com/Timkor/nuxt-locale#readme",
+  "dependencies": {
+    "intl": "^1.2.5",
+    "locale-currency": "0.0.2"
+  }
 }
