--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "homepage": "https://github.com/Timkor/nuxt-locale#readme",
   "dependencies": {
+    "express": "^4.16.4",
+    "serve-static": "^1.13.2",
     "intl": "^1.2.5",
     "locale-currency": "0.0.2"
   }
